...
        callahan: 'CALLAHAN',
      } as Partial<Record<ThrowResult, string>>
    )[result];
  }
  if (showSpecificResult) {
    if (result === 'drop') return isSplitAttribution ? '50/50' : 'DROP';
    if (result === 'stall') return hasDefender ? 'STALL' : 'STALLED';
    return (
      {
        throwaway: 'THROWAWAY',
        block: 'BLOCK',
        pressure: 'PRESSURE',
        callahan: 'CALLAHAN',
      } as Partial<Record<ThrowResult, string>>
    )[result];
  }
  if (result === 'callahan') return 'CALLAHAN';
  if (result === 'stall') return hasDefender ? 'STALL' : 'OPP TURN';
...
